2005-07-12  Dale Johannesen  <dalej@apple.com>

	* config/rs6000.c (rs6000_rtx_cost):  Move FLOAT_EXTEND.

2005-07-12  Andrew Pinski  <pinskia@physics.uc.edu>

	PR bootstrap/21704
	* host-linux.h: Include limits.h.

2005-07-12  Dale Johannesen  <dalej@apple.com>

	* expr.c (compress_float_constant):  Add cost check.
	* config/rs6000.c (rs6000_rtx_cost):  Adjust FLOAT_EXTEND cost.

2005-07-12  Dale Johannesen  <dalej@apple.com>

	* gcc.target/i386/compress-float-sse.c:  New.
	* gcc.target/i386/compress-float-sse-pic.c:  New.
	* gcc.target/i386/compress-float-387.c:  New.
	* gcc.target/i386/compress-float-387-pic.c:  New.
	* gcc.dg/compress-float-ppc.c:  New.
	* gcc.dg/compress-float-ppc-pic.c:  New.

2005-07-12  Eric Christopher  <echristo@redhat.com>

	* gcc.c (struct infile): Update comment for language.
	(main): Rewrite input file resetting code.

2005-07-12  Andrew Pinski  <pinskia@physics.uc.edu>

	PR tree-opt/22335
	* tree-ssa-dom.c (eliminate_redundant_computations): Reject the prop if
	requiring a cast in a non RHS of modify_expr.  Add a cast when required.
	(lookup_avail_expr): Use constant_boolean_node instead
	of boolean_false_node/boolean_true_node.

2005-07-12  Ben Elliston  <bje@au.ibm.com>

	* tree-cfg.c (dump_cfg_stats): Add a new fmt_str_2 format string
	and use it when printing num_edges.

2005-07-12  Bernd Schmidt  <bernd.schmidt@analog.com>

	* doc/extend.texi (Blackfin Built-in Functions): New section.
	* doc/invoke.texi (mcsync-anomaly, mno-csync-anomaly): Fix the
	@opindex.

2005-07-12  Adrian Straetling  <straetling@de.ibm.com>

	* builtins.c: (expand_builtin_memcmp, expand_builtin_strncmp):
	s/cmpstrsi/cmpstrnsi
	(expand_builtin_strcmp): Rewrite to support both 'cmpstrsi' and
	'cmpstrnsi'.
	* optabs.c: (prepare_cmp_insn): Add availability of 'cmpstrn'.
	(init_optabs): Initialize cmpstrn_optab.
	* optabs.h: (enum insn_code cmpstrn_optab): Declare.
	* genopinit.c: (optabs[]): Add 'cmpstrn' to initialisation.