@@ -1,3 +1,12 @@
+2005-07-13  Jan Hubicka  <jh@suse.cz>
+
+	* tree-ssa-operands.c (parse_ssa_operands): Fix formatting.
+	(get_expr_operands): Fix thinko wrt flags and subvars.
+
+	PR tree-optimize/22379
+	* tree-inline.c (expand_call_inline): Do not output sorry in early
+	inlining.
+
 2005-07-12  Dale Johannesen  <dalej@apple.com>
 
 	* config/rs6000.c (rs6000_rtx_cost):  Move FLOAT_EXTEND.
